force-app/main/default/objects/SF_Integration_Log__c/SF_Integration_Log__c.object-meta.xml
<CustomObject>
    <description>Object to store error messages from importing data into and out of Salesforce</description>
    <label>SF Integration Log</label>
    <nameField>
        <label>SF Integration Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SF Integration Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>