force-app/main/default/objects/SF_Integration_Log__c/fields/Database_Name__c.field-meta.xml
<CustomField>
    <fullName>Database_Name__c</fullName>
    <label>Database Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>