force-app/main/default/objects/SF_Integration_Log__c/fields/Errors__c.field-meta.xml
<CustomField>
    <fullName>Errors__c</fullName>
    <description>Store the Errors Messages from the Boomi Integration</description>
    <label>Errors</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>