force-app/main/default/objects/SF_Integration_Log__c/fields/Errors_Notes__c.field-meta.xml
<CustomField>
    <fullName>Errors_Notes__c</fullName>
    <label>Errors - Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>