force-app/main/default/objects/SF_Integration_Log__c/fields/System__c.field-meta.xml
<CustomField>
    <fullName>System__c</fullName>
    <description>Shows the Integration Process that caused the Error</description>
    <inlineHelpText>Shows the Integration Process that caused the Error</inlineHelpText>
    <label>System</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RFMS</fullName>
            </value>
            <value>
                <fullName>NuWood</fullName>
            </value>
            <value>
                <fullName>Vintage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>