force-app/main/default/objects/SF_Integration_Log__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Database_Name__c</columns>
    <columns>Direction__c</columns>
    <columns>Errors__c</columns>
    <columns>Integration_Type__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>