force-app/main/default/objects/SF_Integration_Log__c/listViews/All_After_Batch_Trigger.listView-meta.xml
<ListView>
    <fullName>All_After_Batch_Trigger</fullName>
    <columns>NAME</columns>
    <columns>Database_Name__c</columns>
    <columns>Direction__c</columns>
    <columns>Integration_Type__c</columns>
    <columns>Errors__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>8/4/2020 12:00 AM</value>
    </filters>
    <label>All After Batch Trigger</label>
</ListView>