force-app/main/default/objects/SF_Integration_Log__c/listViews/AllToday.listView-meta.xml
<ListView>
    <fullName>AllToday</fullName>
    <columns>NAME</columns>
    <columns>Database_Name__c</columns>
    <columns>Direction__c</columns>
    <columns>Integration_Type__c</columns>
    <columns>Errors__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>All - Today</label>
</ListView>